objects/dfsle__GenTemplate__c.object
<CustomObject>
    <fields>
        <fullName>dfsle__AgreementMetadata__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Agreement Metadata</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>dfsle__ApplyCLMWorkflow__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Apply CLM Workflow</label>
        <length>110</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dfsle__Description__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>dfsle__DocumentTargetLocation__c</fullName>
        <label>Document Target Location</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>salesforce</fullName>
                    <default>true</default>
                    <label>salesforce</label>
                </value>
                <value>
                    <fullName>clm</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>dfsle__EnvelopeConfiguration__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The configuration used to generate this envelope.</inlineHelpText>
        <label>Envelope Template</label>
        <referenceTo>dfsle__EnvelopeConfiguration__c</referenceTo>
        <relationshipLabel>DocuSign Gen Templates</relationshipLabel>
        <relationshipName>GenTemplates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>dfsle__FileName__c</fullName>
        <description>Online Editor File Name</description>
        <encryptionScheme>None</encryptionScheme>
        <label>File Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dfsle__FileSuffix__c</fullName>
        <description>Online Editor File Suffix</description>
        <encryptionScheme>None</encryptionScheme>
        <label>File Suffix</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dfsle__HasPreviewedDocuments__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Previewed Documents</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dfsle__InvoiceMappings__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Invoice Mappings</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>dfsle__IsAutomateInvoice__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Automate Invoice</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dfsle__IsSample__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Sample</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dfsle__ObjectMappings2__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Object Mappings 2</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>dfsle__ObjectMappings3__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Object Mappings 3</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>dfsle__ObjectMappings4__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Object Mappings 4</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>dfsle__SignerMappings__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Signer Mappings</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>dfsle__SourceObject__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Source Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dfsle__StepsCompleted__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Steps Completed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>dfsle__TemplateId__c</fullName>
        <description>Online Editor Template Id</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>Template Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>dfsle__TemplateType__c</fullName>
        <description>Template Type</description>
        <label>Template Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Online Editor</fullName>
                    <label>DocuSign Agreement Cloud Editor</label>
                </value>
                <value>
                    <fullName>Microsoft Word</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>dfsle__UseAllTemplates__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Use All Templates</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dfsle__UseCurrentRecord__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Use Current Record</label>
        <type>Checkbox</type>
    </fields>
    <label>DocuSign Gen Template</label>
    <listViews>
        <fullName>dfsle__All</fullName>
        <columns>NAME</columns>
        <columns>dfsle__SourceObject__c</columns>
        <columns>dfsle__IsSample__c</columns>
        <columns>dfsle__TemplateType__c</columns>
        <columns>dfsle__DocumentTargetLocation__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DocuSign Gen Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>